# simulator

./: .gitignore  CMakeLists.txt  README.md
src/: Bank.cpp  Categorie.cpp  File.cpp  main.cpp
src/includes/: Bank.hpp  Categorie.hpp  File.hpp
